Endpoint for createNote
